--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -40,3 +40,11 @@
 [[constraint]]
   name = "github.com/mattn/go-sqlite3"
   version = "1.6.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/tumblr/tumblr.go"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/tumblr/tumblrclient.go"
