--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -48,3 +48,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/tumblr/tumblrclient.go"
+
+[[constraint]]
+  name = "github.com/mmcdole/gofeed"
+  version = "1.0.0-beta2"
